# pywordle

./: .gitignore  MANIFEST.in  README.md  elimination.py  pywordle.py  setup.cfg
examples/: barebones.py  random_solver.py
examples/cli_game/: cli_game.py  keyboard.py
examples/maximise_similarity/: maximise_similarity.py
examples/solver_template/: solver_template.py
helpers/: elimination.py
pywordle/: __init__.py  dump.json  pywordle.py
pywordle/examples/: most_green.py
pywordle/examples/cli_game/: cli_game.py
pywordle/examples/maximise_similarity/: cleanup_guess.py  cleanup_word.py  maximise_similarity.py  run.py  run_single.py  tracking.py  word_frequency.py
pywordle/examples/solve_unknown_word/: solve_unknown_word.py
pywordle/examples/solver_template/: solver_template.py
pywordle/examples/tree/: tree.py
pywordle/helpers/: elimination.py
pywordle/pywordle/: __init__.py  pywordle.py
pywordle/solvers/solver1/: run.py  solver.py
pywordle/tests/elimination/: condo.json  crime.json  lying.json  tenth.json  test_elimination.py
pywordle/tests/maximise_similarity/: new_ms_functions.py  test_remaining_letters.py  test_word_generator.py
pywordle/tests/saving_gamestate/: test_saving_gamestate.py
pywordle/tests/true_yellow/: test_true_yellow.py
pywordle/utils/: cli_keyboard.py  flatten_list.py  solvetracker.py
tests/elimination/: aloof.json  chief.json  edges.json  myrrh.json  spays.json  test_elimination.py
utils/: cli_colour_string.py  cli_keyboard.py  solvetracker.py
