[metadata]
name = pywordle
version = 1.0.0a1
description = An environment to implement wordle solving algorithms
long_description = file: README.md
license = GNU GPLv3
author = Marcus LV
author_email = x@gmail.com
classifiers = 
    Environment :: Console
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: Education
keywords = wordle solver solving game puzzle

    

[options]
packages = find:
include_package_data = True
python_requires = >=3.0
setup_requires = 
    setuptools >=44.0.0
install_requires = 
    alive-progress
    pytest
